--- a/uk.ac.kcl.inf.modelspeak.abstract_arguments.ecore.edit/plugin.properties
+++ b/uk.ac.kcl.inf.modelspeak.abstract_arguments.ecore.edit/plugin.properties
@@ -67,3 +67,4 @@ _UI_ModelIsValidClaim_model_feature = Model
 _UI_ModelInputDataValid_dataDescription_feature = Data Description
 _UI_Unknown_feature = Unspecified
 
+_UI_DerivedAbstractArgument_label_feature = Label
