Some style changes for better paper writing
In particular, now showing the IDs from the abstract argument framework as border notes in the argument graph to make linking across easier.

--- a/uk.ac.kcl.inf.modelspeak.arguments.ecore.edit/plugin.properties
+++ b/uk.ac.kcl.inf.modelspeak.arguments.ecore.edit/plugin.properties
@@ -64,3 +64,5 @@ _UI_ModelIsValidClaim_model_feature = Model
 _UI_ModelInpoutDataValid_dataDescription_feature = Data Description
 _UI_ModelInputDataValid_type = Model Input Data Valid
 _UI_ModelInputDataValid_dataDescription_feature = Data Description
+_UI_ArgumentElement_id_feature = Id
+_UI_ArgumentGraph_lastID_feature = Last ID
